2006-06-13  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/tuplet-bracket.cc (calc_positions): look at
	stem-end-position for tuplet bracket slope. Fixes sloped tuplet
	brackets narrower than beams. Backportme.

	* lily/lexer.ll: set version-seen? even if version is
	INVALID. Backportme.

	* lily/rest.cc (y_offset_callback): bugfix: decide position
	override based on scm_is_number(). Fixes \rest on center staff
	line. Backportme.

	* lily/beaming-pattern.cc (best_splitpoint_index): fix beaming
	patterns for 16th triplets.

2006-06-10  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ page.itely, global.itely: editing
	and reorg.

	* Documentation/user/ various: findex -> funindex.

2006-06-10  Erik Sandberg  <mandolaerik@gmail.com>

	* lily/time-scaled-music-iterator.cc: Use tupletSpannerDuration to
	insert extra tuplet events.

2006-06-10  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/programming-interfaces.itely: add
	info from NEWS.

	* python/convertrules.py: add annotatefoo -> annotate-foo
	rules.

	* Documentation/user/global.itely: start editing.

	* Documentation/user/page.itely: major editing, new spacing
	docs.

2006-06-10  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scm/define-markup-commands.scm (wordwrap-markups): use
	output-def 'line-width if undefined.

	* HACKING: trim outdated info.

2006-06-09  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scm/define-grobs.scm (all-grob-descriptions): Add
	line-spanner-interface to all grobs that already have
	text-spanner-interface or dynamic-text-spanner-interface

	* scm/page.scm: Rename annotate{headers,systems,page}->
	annotate-*

	* input/regression/page-spacing.ly,
	input/regression/page-layout-manual-position.ly: idem

2006-06-09  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/line-spanner.cc: cleanup property list.

	* scripts/lilypond-book.py (find_toplevel_snippets): don't use
	generator expressions (2.3 compat). 

2006-06-09  Mats Bengtsson  <mabe@drongo.s3.kth.se>
